--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/logo.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/src/assets/Untitled design (3).png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>careerAlly</title>
 
